2003-04-08  Loban A Rahman <loban@earthling.net>

	* stickynotes_applet_callbacks.c: Fixed bug #110112, stickynotes now
	  compiles correctly using gcc 2.95.
	
2003-04-04  Loban A Rahman <loban@earthling.net>

	* *.h, *.c: Fixed bug #106154, sticky notes are now correctly
	  skipped from the pager and taskbar.
	* *.h, *.c: Some minor code cleanup.
	* *.h, *.c: Partially fixed bug #108124.

2003-04-02  Loban A Rahman <loban@earthling.net>

	* *.h, *.c: Code cleanup. Fixed some visibility issues.
	* stickynotes_applet.c: Fixed a crash while autosaving.

2003-04-01  Loban A Rahman <loban@earthling.net>

	* stickynotes.c, stickynotes_callbacks.h, stickynotes_callbacks.c:
	  Fixed bug #109287: Choosing "close window" from the window menu of a
	  sticky note triggers destroying the note, now.
	* stickynotes_callbacks.c, stickynotes_applet_callbacks.c:
	  Fixed bug #109391: Focus indication around applet is back.
	* stickynotes_applet_callbacks.c:
	  Fixed bug #109781: About dialog acts properly now.

2003-03-28  Loban A Rahman <loban@earthling.net>

	* GNOME_StickyNotesApplet.xml.in, Makefile.am:
	  Removed redundant GNOME_StickyNotesApplet.xml.in file and added
	  GNOME_StickyNotesApplet.xml file. Modified Makefile.am to reflect.
	* stickynotes.c, stickynotes_applet_callbacks.c:
	  Fixed bug #109467: Note positions are no longer forgotten.
	  Fixed bug #109469: About window no longer closes early.
	  Fixed bug #109470: Preferences dialog no longer crashes applet.

2003-03-27  Padraig O'Briain  <padraig.obriain@sun.com>

	* Makefile.am: Add $(LIBGLADE_LIBS) to stickynotes_applet_LDADD to
	find unresolved symbols. Fixes bug #109264).

2003-03-21  Mikael Hallendal  <micke@codefactory.se>

	* stickynotes_applet_callbacks.c:
	- Use NULL instead of 0 for pointers.
	(menu_preferences_cb): build fixes.
	(menu_about_cb): build fixes

	* stickynotes_applet.c (stickynotes_applet_fill): 
	- Use NULL instead of 0 for pointers.

2003-03-19  Loban A Rahman <loban@earthling.net>
