@@ -2,9 +2,6 @@
 *** Sticky Notes for the Gnome Desktop Environment. ***
 
 * Use enums
-
-* GnomeAboutDialog hacks needed when using libglade.
-	- Setting "name"
-	- Setting "version"
-	- Setting "translation_credits"
-
+* Accessibility
+	- Press enter
+	- Note popup menu
