@@ -2,6 +2,7 @@
 
 	* stickynotes_applet_callbacks.c: Fixed bug #110112, stickynotes now
 	  compiles correctly using gcc 2.95.
+	* *,h, *c.: Remembers "hide all notes" across sessions.
 	
 2003-04-04  Loban A Rahman <loban@earthling.net>
 
